--- a/templates/new_restaurant.html
+++ b/templates/new_restaurant.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <h1>Register a new restaurant</h1>
-            <form action="{{ url_for('mainRestaurants') }}" method = 'POST'>
+            <form action="{{ url_for('newRestaurant') }}" method = 'POST'>
                 <input name='name' type='text' placeholder="Restaurant name">
                 <input type='submit' value='Register' class='button'>
                 <a href = "{{ url_for('mainRestaurants') }}", class='button'>Cancel</a>
