--- a/templates/main_restaurants.html
+++ b/templates/main_restaurants.html
@@ -1,14 +1,13 @@
 <html>
     <head>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='itemsPage.css') }}">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
     <body>
         <div class="header">
             <h1>Restaurants</h1>
-            <h3>
-                <a href="/restaurants/new">Register a new restaurant</a>
-            </h3>
         </div>
+        <a href="/restaurants/new", class='add'><i class="fas fa-plus"></i></a>
         <div class="restaurants-container">
 
             {% for r in restaurants %}
