--- a/templates/delete_restaurant.html
+++ b/templates/delete_restaurant.html
@@ -1,14 +1,23 @@
 <html>
     <head>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
     <body>
         <div class="edit-container">
             <div class="edit-form">
                 <h1>Delete {{restaurant.name}}?</h1>
                 <form action="{{ url_for('deleteRestaurant', restaurant_id=restaurant_id) }}" method = 'POST'>
-                    <input type='submit', value = 'Delete', class='button-cancel'>
-                    <a href = "{{ url_for('mainRestaurants') }}", class='button-confirm'> Cancel </a>
+                    <button type="submit" class='button-cancel'>
+                        <i class="fas fa-thumbs-up">
+                            <p> Delete</p>
+                        </i>
+                    </button>
+                    <a href = "{{ url_for('mainRestaurants') }}", class='button-confirm'>
+                        <i class="fas fa-thumbs-down">
+                            <p> Cancel</p>
+                        </i>
+                    </a>
                 </form>
             </div>
         </div>
