--- a/templates/main_restaurants.html
+++ b/templates/main_restaurants.html
@@ -11,7 +11,7 @@
         
         {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <ul>
+                <ul class='flash-message'>
                     {% for message in messages %}
                     <li><strong>{{message}}</strong></li>
                     {% endfor %}
